--- a/wormsim.ipynb
+++ b/wormsim.ipynb
@@ -173,7 +173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 370,
+      "execution_count": 376,
       "metadata": {
         "collapsed": false
       },
@@ -426,7 +426,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 371,
+      "execution_count": 377,
       "metadata": {
         "collapsed": false
       },
@@ -537,7 +537,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 372,
+      "execution_count": 378,
       "metadata": {
         "collapsed": false
       },
@@ -575,7 +575,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 373,
+      "execution_count": 379,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -593,7 +593,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 374,
+      "execution_count": 380,
       "metadata": {},
       "outputs": [
         {
@@ -602,7 +602,7 @@
               "(3, 10, 64, 64)"
             ]
           },
-          "execution_count": 374,
+          "execution_count": 380,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -613,13 +613,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 375,
+      "execution_count": 381,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
+            "(3, 10, 64, 64)\n",
             "(3, 2, 10, 2)\n",
             "(3, 2, 10, 28, 28)\n",
             "(3, 2, 400)\n",
@@ -631,7 +632,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "/tmp/ipykernel_2669/3760711669.py:223: DeprecationWarning: jax.tree_map is deprecated: use jax.tree.map (jax v0.4.25 or newer) or jax.tree_util.tree_map (any JAX version).\n",
+            "/tmp/ipykernel_2669/1492062277.py:224: DeprecationWarning: jax.tree_map is deprecated: use jax.tree.map (jax v0.4.25 or newer) or jax.tree_util.tree_map (any JAX version).\n",
             "  proposed_sim_params = jax.tree_map(lambda x: x.squeeze(-1), proposed_sim_params)\n"
           ]
         },
@@ -640,8 +641,25 @@
           "output_type": "stream",
           "text": [
             "(3, 10, 2, 6, 2)\n",
-            "(3, 10, 2, 28, 28)\n",
-            "(3, 2, 10, 64, 64)\n"
+            "(3, 10, 2, 28, 28)\n"
+          ]
+        },
+        {
+          "ename": "ValueError",
+          "evalue": "vmap got inconsistent sizes for array axes to be mapped:\n  * one axis had size 10: axis 0 of argument digits of type float32[10,2,28,28];\n  * one axis had size 2: axis 0 of argument z_where of type float32[2,10,2]",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[381], line 14\u001b[0m\n\u001b[1;32m     12\u001b[0m frame_size \u001b[38;5;241m=\u001b[39m test_data\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m     13\u001b[0m bmnist_net \u001b[38;5;241m=\u001b[39m BMNISTAutoEncoder(digit_mean\u001b[38;5;241m=\u001b[39mdigit_mean, frame_size\u001b[38;5;241m=\u001b[39mframe_size)\n\u001b[0;32m---> 14\u001b[0m init_params \u001b[38;5;241m=\u001b[39m \u001b[43mbmnist_net\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mjax\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrandom\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mPRNGKey\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtest_data\u001b[49m\u001b[43m)\u001b[49m\n",
+            "    \u001b[0;31m[... skipping hidden 9 frame]\u001b[0m\n",
+            "Cell \u001b[0;32mIn[376], line 233\u001b[0m, in \u001b[0;36mBMNISTAutoEncoder.__call__\u001b[0;34m(self, frames)\u001b[0m\n\u001b[1;32m    231\u001b[0m digit_recon \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdecode_what(worms)\n\u001b[1;32m    232\u001b[0m \u001b[38;5;28mprint\u001b[39m(digit_recon\u001b[38;5;241m.\u001b[39mshape)\n\u001b[0;32m--> 233\u001b[0m frames_recon \u001b[38;5;241m=\u001b[39m \u001b[43membed_digits\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdigit_recon\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mz_where\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mframe_size\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    234\u001b[0m \u001b[38;5;28mprint\u001b[39m(frames_recon\u001b[38;5;241m.\u001b[39mshape)\n\u001b[1;32m    235\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m frames_recon\n",
+            "Cell \u001b[0;32mIn[376], line 47\u001b[0m, in \u001b[0;36membed_digits\u001b[0;34m(digits, z_where, frame_size)\u001b[0m\n\u001b[1;32m     45\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     46\u001b[0m   in_axes \u001b[38;5;241m=\u001b[39m (\u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m---> 47\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mjax\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvmap\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpartial\u001b[49m\u001b[43m(\u001b[49m\u001b[43membed_digits\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mframe_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mframe_size\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43min_axes\u001b[49m\u001b[43m)\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     48\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdigits\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mz_where\u001b[49m\n\u001b[1;32m     49\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
+            "    \u001b[0;31m[... skipping hidden 3 frame]\u001b[0m\n",
+            "Cell \u001b[0;32mIn[376], line 47\u001b[0m, in \u001b[0;36membed_digits\u001b[0;34m(digits, z_where, frame_size)\u001b[0m\n\u001b[1;32m     45\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     46\u001b[0m   in_axes \u001b[38;5;241m=\u001b[39m (\u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m---> 47\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mjax\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvmap\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpartial\u001b[49m\u001b[43m(\u001b[49m\u001b[43membed_digits\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mframe_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mframe_size\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43min_axes\u001b[49m\u001b[43m)\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     48\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdigits\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mz_where\u001b[49m\n\u001b[1;32m     49\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
+            "    \u001b[0;31m[... skipping hidden 2 frame]\u001b[0m\n",
+            "File \u001b[0;32m~/aleatory-numpyro/lib/python3.11/site-packages/jax/_src/api.py:1296\u001b[0m, in \u001b[0;36m_mapped_axis_size\u001b[0;34m(fn, tree, vals, dims, name)\u001b[0m\n\u001b[1;32m   1294\u001b[0m   \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   1295\u001b[0m     msg\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m  * some axes (\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mct\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m of them) had size \u001b[39m\u001b[38;5;132;01m{\u001b[39;00msz\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, e.g. axis \u001b[39m\u001b[38;5;132;01m{\u001b[39;00max\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mex\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m;\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m-> 1296\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(msg)[:\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m2\u001b[39m])\n",
+            "\u001b[0;31mValueError\u001b[0m: vmap got inconsistent sizes for array axes to be mapped:\n  * one axis had size 10: axis 0 of argument digits of type float32[10,2,28,28];\n  * one axis had size 2: axis 0 of argument z_where of type float32[2,10,2]"
           ]
         }
       ],
