--- a/wormsim_encoder_only.ipynb
+++ b/wormsim_encoder_only.ipynb
@@ -410,40 +410,40 @@
         "\n",
         "\n",
         "\n",
-        "class EncoderWhere(nn.Module):\n",
-        "  \"\"\"\n",
-        "  MLP to encode the frame into a distribution over worm locations\n",
-        "  \"\"\"\n",
-        "  @nn.compact\n",
-        "  def __call__(self, frame_conv):\n",
-        "    x = frame_conv.reshape(frame_conv.shape[:-2] + (-1,))\n",
-        "    # x = nn.softmax(x, -1)\n",
-        "    x = nn.Dense(200)(x)\n",
-        "    x = nn.relu(x)\n",
-        "    x = nn.Dense(200)(x)\n",
-        "    x = x.reshape(x.shape[:-1] + (2, 100))\n",
-        "    x = nn.relu(x)\n",
-        "    loc_raw = nn.Dense(2)(x[..., 0, :])\n",
-        "    scale_raw = 0.5 * nn.Dense(2)(x[..., 1, :])\n",
-        "    return nn.tanh(loc_raw), jnp.exp(scale_raw)\n",
-        "\n",
-        "\n",
         "# class EncoderWhere(nn.Module):\n",
-        "#   # a CNN to encode the frame into a distribution over worm locations\n",
+        "#   \"\"\"\n",
+        "#   MLP to encode the frame into a distribution over worm locations\n",
+        "#   \"\"\"\n",
         "#   @nn.compact\n",
         "#   def __call__(self, frame_conv):\n",
-        "#     x = jnp.expand_dims(frame_conv, -1)\n",
-        "#     x = nn.Conv(features=8, kernel_size=(3, 3), strides=(2, 2))(x)\n",
+        "#     x = frame_conv.reshape(frame_conv.shape[:-2] + (-1,))\n",
+        "#     x = nn.softmax(x, -1)\n",
+        "#     x = nn.Dense(200)(x)\n",
         "#     x = nn.relu(x)\n",
-        "#     x = nn.Conv(features=16, kernel_size=(3, 3), strides=(2, 2))(x)\n",
-        "#     x = nn.relu(x)\n",
-        "#     x = x.reshape(x.shape[:-3] + (-1,))\n",
-        "#     x = nn.Dense(128)(x)\n",
-        "#     x = x.reshape(x.shape[:-1] + (2, 64))\n",
+        "#     x = nn.Dense(200)(x)\n",
+        "#     x = x.reshape(x.shape[:-1] + (2, 100))\n",
         "#     x = nn.relu(x)\n",
         "#     loc_raw = nn.Dense(2)(x[..., 0, :])\n",
         "#     scale_raw = 0.5 * nn.Dense(2)(x[..., 1, :])\n",
         "#     return nn.tanh(loc_raw), jnp.exp(scale_raw)\n",
+        "\n",
+        "\n",
+        "class EncoderWhere(nn.Module):\n",
+        "  # a CNN to encode the frame into a distribution over worm locations\n",
+        "  @nn.compact\n",
+        "  def __call__(self, frame_conv):\n",
+        "    x = jnp.expand_dims(frame_conv, -1)\n",
+        "    x = nn.Conv(features=8, kernel_size=(3, 3), strides=(2, 2))(x)\n",
+        "    x = nn.relu(x)\n",
+        "    x = nn.Conv(features=16, kernel_size=(3, 3), strides=(2, 2))(x)\n",
+        "    x = nn.relu(x)\n",
+        "    x = x.reshape(x.shape[:-3] + (-1,))\n",
+        "    x = nn.Dense(128)(x)\n",
+        "    x = x.reshape(x.shape[:-1] + (2, 64))\n",
+        "    x = nn.relu(x)\n",
+        "    loc_raw = nn.Dense(2)(x[..., 0, :])\n",
+        "    scale_raw = 0.5 * nn.Dense(2)(x[..., 1, :])\n",
+        "    return nn.tanh(loc_raw), jnp.exp(scale_raw)\n",
         "\n",
         "class DecoderWhat(nn.Module):\n",
         "  \"\"\"\n",
@@ -452,7 +452,7 @@
         "  @nn.compact\n",
         "  def __call__(self, worms):\n",
         "    # vmap interpolate over all worms\n",
-        "    worms = interpolate(worms, n_points = 8)    \n",
+        "    worms = interpolate(worms, n_points = 12)    \n",
         "\n",
         "    # make worm widths for all knots\n",
         "    # R = 0.8\n",
@@ -752,8 +752,8 @@
         "  num_particles = 10\n",
         "  # learning_rate = 1e-4\n",
         "  learning_rate = 5e-5\n",
-        "  # num_steps = 20000\n",
-        "  num_steps = 4000\n",
+        "  num_steps = 20000\n",
+        "  # num_steps = 4000\n",
         "  # num_steps = 400\n",
         "  device = \"gpu\"\n",
         "\n",
@@ -904,7 +904,20 @@
             "=====\n",
             "Step 200  | ess     1.0000 | log_Z -38094.0625 | log_density -38727.7578 | loss 2088297.8750 | squared_grad_norm 149278624.0000\n",
             "Step 400  | ess     1.0000 | log_Z -34842.6172 | log_density -35831.5000 | loss 1899390.2500 | squared_grad_norm 1182019328.0000\n",
-            "Step 600  | ess     1.0000 | log_Z -37280.7539 | log_density -38738.6406 | loss 2119061.7500 | squared_grad_norm 24462661517312.0000\n"
+            "Step 600  | ess     1.0000 | log_Z -37280.7539 | log_density -38738.6406 | loss 2119061.7500 | squared_grad_norm 24462661517312.0000\n",
+            "Step 800  | ess     1.0087 | log_Z -27321.9531 | log_density -28404.4355 | loss 1526111.2500 | squared_grad_norm        nan\n",
+            "Step 1000 | ess     1.0000 | log_Z -37243.7188 | log_density -37874.4141 | loss 2022962.6250 | squared_grad_norm        nan\n",
+            "Step 1200 | ess     1.0000 | log_Z -32316.4258 | log_density -32940.8867 | loss 1765284.6250 | squared_grad_norm        nan\n",
+            "Step 1400 | ess     1.0000 | log_Z -37633.0000 | log_density -38361.6719 | loss 2081792.3750 | squared_grad_norm        nan\n",
+            "Step 1600 | ess     1.0000 | log_Z -35122.1641 | log_density -35843.7344 | loss 1934372.3750 | squared_grad_norm        nan\n",
+            "Step 1800 | ess        nan | log_Z        nan | log_density -36728.4531 | loss        nan | squared_grad_norm        nan\n",
+            "Step 2000 | ess     1.0000 | log_Z -40119.6680 | log_density -41210.3008 | loss 2192616.5000 | squared_grad_norm        nan\n",
+            "Step 2200 | ess        nan | log_Z        nan | log_density -36340.6367 | loss        nan | squared_grad_norm        nan\n",
+            "Step 2400 | ess        nan | log_Z        nan | log_density        nan | loss        nan | squared_grad_norm        nan\n",
+            "Step 2600 | ess        nan | log_Z        nan | log_density -35741.9844 | loss        nan | squared_grad_norm        nan\n",
+            "Step 2800 | ess        nan | log_Z        nan | log_density -40047.9062 | loss        nan | squared_grad_norm        nan\n",
+            "Step 3000 | ess     1.0000 | log_Z -35590.7500 | log_density -36309.9648 | loss 1944318.2500 | squared_grad_norm        nan\n",
+            "Step 3200 | ess        nan | log_Z        nan | log_density -40089.4961 | loss        nan | squared_grad_norm        nan\n"
           ]
         }
       ],
@@ -1023,7 +1036,7 @@
         "plt.tight_layout()\n",
         "ani = animation.FuncAnimation(fig, animate, frames=range(10), interval=300)\n",
         "writer = animation.PillowWriter(fps=15)\n",
-        "ani.save(\"wormsim.gif\", writer=writer)\n",
+        "ani.save(\"worms.gif\", writer=writer)\n",
         "plt.show()\n"
       ]
     },
