--- a/gen_worm_data.ipynb
+++ b/gen_worm_data.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/frans/.local/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import numpyro\n",
     "import numpyro.distributions as dist\n",
@@ -22,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,12 +45,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sim_worms_orig(nworms, batch_size, n_frames):\n",
-    "    duration = 1.55\n",
+    "    duration = 2\n",
     "    snapshots = 10\n",
     "    kpoints = 32\n",
     "    box_size = 64\n",
@@ -70,6 +79,8 @@
     "\n",
     "            params = {'L': L, 'A': A, 'T': T, 'kw': kw, 'ku': ku, 'inc': inc, 'dr': dr, 'phase_1': phase_1, 'phase_2': phase_2, 'phase_3': phase_3, 'alpha': alpha, 'x0': x0, 'y0': y0}\n",
     "\n",
+    "            numpyro.deterministic(\"params\", params)\n",
+    "            \n",
     "            sim_fn = partial(\n",
     "                worm_simulation,\n",
     "                duration=duration,\n",
@@ -83,21 +94,29 @@
     "                # subtract mean and divide by standard deviation\n",
     "                # worms = (worms - jnp.mean(worms, axis=(-5), keepdims=True)) / jnp.std(worms, axis=(-5), keepdims=True)\n",
     "                numpyro.deterministic('worms', worms)\n",
-    "    return worms, x0, y0"
+    "    return worms, params"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-08-05 16:46:50.980703: W external/xla/xla/service/gpu/nvptx_compiler.cc:836] The NVIDIA driver's CUDA version is 12.2 which is older than the PTX compiler version (12.5.82). Because the driver is older than the PTX compiler version, XLA is disabling parallel compilation, which may slow down compilation. You should update your NVIDIA driver or use the NVIDIA-provided CUDA forward compatibility packages.\n"
+     ]
+    }
+   ],
    "source": [
     "key, nworms, box_size = random.PRNGKey(0), 2, 64"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,21 +125,41 @@
     "\n",
     "\n",
     "seeded_model = seed(sim_worms_orig, key)\n",
-    "tr = trace(seeded_model).get_trace(nworms, 20_000, 10)"
+    "tr = trace(seeded_model).get_trace(nworms, 40_000, 10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(20000, 2, 10, 32, 2)"
+       "(40000, 2)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tr[\"params\"][\"value\"][\"L\"].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(40000, 2, 10, 32, 2)"
+      ]
+     },
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,9 +170,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-08-05 16:46:58.555756: W external/xla/xla/service/hlo_rematerialization.cc:3005] Can't reduce memory use below 5.09GiB (5469342948 bytes) by rematerialization; only reduced to 6.14GiB (6596800080 bytes), down from 6.14GiB (6596800080 bytes) originally\n"
+     ]
+    }
+   ],
    "source": [
     "worms = tr['worms']['value'].transpose(0, 2, 1, 3, 4)\n",
     "clips = jax.vmap(convert_to_clip, in_axes=(0, None))(worms, box_size)"
@@ -141,12 +188,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# save as npy\n",
-    "np.save('worms_train_20k.npy', clips)"
+    "np.save('worms_train_40k.npy', clips)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import pickle\n",
+    "# save tr[\"params\"][\"value\"]\n",
+    "\n",
+    "with open(\"params_40k.pkl\", 'wb') as f:\n",
+    "    pickle.dump(tr[\"params\"][\"value\"], f)"
    ]
   },
   {
